--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ piston2d-graphics = "0.44.0"
 piston2d-opengl_graphics = "0.83.0"
 pistoncore-glutin_window = "0.72.0"
 find_folder = "0.3.0"
+image = "0.24.7"
